tests/neg-custom-args/captures/simple-using.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/simple-using.scala:8:15 ----------------------------------
8 |  usingLogFile { f => () => f.write(2) } // error
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^
  |               Found:    (f: java.io.FileOutputStream^) ->? box () ->{f} Unit
  |               Required: (f: java.io.FileOutputStream^) ->{fresh} box () ->? Unit
  |
  |               Note that reference f.type
  |               cannot be included in outer capture set ?
  |
  | longer explanation available when compiling with `-explain`
